--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Linux Firewall Monitor
-description: TBC...
+description: A firewall monitoring service, having the best security approaches and practices implemented ...
