--- a/lfmon.conf
+++ b/lfmon.conf
@@ -1,7 +1,7 @@
 #
 # This is the main LFMON service configuration file.  It contains the
 # configuration directives and options that give the server its instructions.
-# See <URL:https://mlaroussi.github.com/lfmon> for detailed information.
+# See <URL:https://mlaroussi.github.io/lfmon> for detailed information.
 #
 
 # IPTables path
